# ImageAlchemy

./: .gitignore  README.md
pdi_code/: CMakeLists.txt  README.md  build_windows.bat
pdi_code/app/: comparacao_opencv.cpp  run.cpp  run_m2.cpp
pdi_code/app/output/: run
pdi_code/include/: ConversorTonsCinza.hpp  DetectorBordas.hpp  MorfologiaMatematica.hpp  OperacoesAritmeticas.hpp  OperacoesConvolucao.hpp  Operation.hpp  ProcessadorHistogramas.hpp  ProcessadorImagens.hpp
pdi_code/src/: ConversorTonsCinza.cpp  DetectorBordas.cpp  MorfologiaMatematica.cpp  OperacoesAritmeticas.cpp  OperacoesConvolucao.cpp  Operation.cpp  ProcessadorHistogramas.cpp  ProcessadorImagens.cpp
